--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 <span>from 10 EUR</span>
               </li>
               <li class="prices__item">
-                <span>Shaving with a dangerous razor</span>
+                <span>Straight razor shaving</span>
                 <span>from 10 EUR</span>
               </li>
               <li class="prices__item">
@@ -325,7 +325,7 @@
                 <span>from 10 EUR</span>
               </li>
               <li class="prices__item">
-                <span>Children's haircut (up to 12 years old)</span>
+                <span>Children's haircut</span>
                 <span>from 15 EUR</span>
               </li>
               <li class="prices__item">
